--- a/css/global.css
+++ b/css/global.css
@@ -273,10 +273,20 @@ footer {
   margin-top: 100px;
 }
 footer h2 {
-  color: #fff;
-  background: #e95385;
-  line-height: 178px;
   margin: 0;
+}
+footer h2 a {
+  color: #fff;
+  display: block;
+  line-height: 178px;
+  background: #e95385;
+}
+footer h2 a:hover {
+  color: #fff;
+  background: #66c3c2;
+}
+footer i {
+  margin-left: 10px;
 }
 
 #wrapper {
@@ -541,17 +551,17 @@ footer h2 {
   transform: scale(0.9);
 }
 
-.item10, .item11, .item12, .item13 {
+.item10, .item11, .item12, .item13, .item14 {
   width: 36%;
   opacity: 1 !important;
 }
 @media only screen and (min-width: 769px) and (max-width: 991px) {
-  .item10, .item11, .item12, .item13 {
+  .item10, .item11, .item12, .item13, .item14 {
     width: 26%;
   }
 }
 @media only screen and (max-width: 768px) {
-  .item10, .item11, .item12, .item13 {
+  .item10, .item11, .item12, .item13, .item14 {
     width: 20%;
   }
 }
@@ -565,6 +575,9 @@ footer h2 {
   }
 }
 
+#clients {
+  margin: 40px auto;
+}
 #clients .carousel {
   width: 80%;
   margin: 0 auto;
@@ -586,7 +599,7 @@ footer h2 {
   top: 0;
 }
 #clients blockquote:after {
-  bottom: -5%;
+  bottom: auto;
 }
 #clients .carousel-inner > .item > img, #clients .carousel-inner > .item > a > img {
   display: inline-block;
@@ -595,6 +608,20 @@ footer h2 {
   width: 100px;
   height: 100px;
   border-radius: 100%;
+}
+#clients .carousel-indicators {
+  bottom: -50px;
+}
+#clients .carousel-indicators .active {
+  background-color: #e95385;
+}
+#clients .carousel-indicators li {
+  border-color: #e95385;
+  background-color: #fff;
+}
+
+#instagram {
+  margin: 120px 0;
 }
 
 .hot-pink {
