--- a/css/global.css
+++ b/css/global.css
@@ -17,6 +17,16 @@ body {
   overflow-x: hidden;
 }
 
+::-moz-selection {
+  color: #fff;
+  background: #66c3c2;
+}
+
+::selection {
+  color: #fff;
+  background: #66c3c2;
+}
+
 h1, h2, h3, h4, h5, h6 {
   letter-spacing: 0;
   line-height: 1.8;
@@ -209,7 +219,7 @@ ul, li {
 blockquote {
   display: inline-block;
   width: 65%;
-  color: #66c3c2;
+  color: #fff100;
   padding: 0.5em 10px;
   quotes: "“" "”" "‘" "’";
   text-align: left;
@@ -244,7 +254,8 @@ blockquote h2 span {
   font-size: 24px;
   display: block;
   text-align: right;
-  line-height: 24px;
+  line-height: 40px !important;
+  font-weight: normal !important;
 }
 @media only screen and (max-width: 480px) {
   blockquote {
@@ -296,11 +307,16 @@ footer i {
 #intro {
   padding-bottom: 50px;
 }
+#intro.parallax {
+  background: url(../images/intro_bg.jpg) no-repeat center center fixed;
+  background-size: cover;
+}
 #intro h1 {
   margin: 0;
 }
 #intro h2 {
   margin-top: 10px;
+  color: #fff100;
 }
 #intro .img-responsive {
   margin: 0 auto;
@@ -309,19 +325,19 @@ footer i {
   display: inline;
 }
 #intro .dropdown .dropdown-toggle {
-  color: #66c3c2;
+  color: #fff100;
   cursor: pointer;
 }
 #intro .copywriting {
   position: relative;
   z-index: 2;
+  color: #fff;
 }
 #intro .main-copywriter {
   font-size: 1.625em;
 }
-#intro .main-copywriter span.hot-pink {
-  padding: 0 10px;
-  text-decoration: underline;
+#intro .main-copywriter span.yellow {
+  padding: 0 6px;
 }
 #intro .dropdown-menu {
   width: 300px;
@@ -369,26 +385,39 @@ footer i {
   margin-right: 4px;
   transition: all .3s;
 }
-#intro .dropdown-menu .team-info li a {
-  display: block;
-  color: #fff;
-}
-#intro .dropdown-menu .team-info li:nth-of-type(1) {
-  background: #1769ff;
-}
-#intro .dropdown-menu .team-info li:nth-of-type(2) {
-  background: #e1306c;
-}
-#intro .dropdown-menu .team-info li:nth-of-type(3) {
+#intro .dropdown-menu .team-info li.twitter {
   background: #1da1f2;
+}
+#intro .dropdown-menu .team-info li.linkedin {
+  background: #0077b5;
+}
+#intro .dropdown-menu .team-info li.behance {
+  background: #1769ff;
 }
 #intro .dropdown-menu .team-info li:hover, #intro .dropdown-menu .team-info li:active, #intro .dropdown-menu .team-info li:focus {
   box-shadow: 0 3px 10px rgba(59, 77, 79, 0.4);
   width: 40px;
 }
+#intro .dropdown-menu .team-info li a {
+  display: block;
+  color: #fff;
+}
 @media only screen and (max-width: 480px) {
   #intro {
     padding-bottom: 10px;
+  }
+  #intro:before {
+    content: ' ';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0.2;
+    background: url("../images/wireframe_01.png") no-repeat center 0px;
+    background-size: 76%;
   }
   #intro h1 {
     width: 80%;
@@ -415,8 +444,8 @@ footer i {
   position: relative;
   z-index: 2;
   *zoom: 1;
-  padding: 60px 0;
-  margin: 60px 0;
+  padding: 60px 0 0;
+  margin-bottom: 60px;
   background: #fff;
   box-shadow: 0 0 80px rgba(59, 77, 79, 0.3), 0 0 50px rgba(59, 77, 79, 0.2);
 }
@@ -448,6 +477,9 @@ footer i {
   margin-top: 20px;
   margin-bottom: 0;
 }
+#main h4 span {
+  font-size: 15px;
+}
 #main p.price {
   margin: 10px 0;
 }
@@ -463,38 +495,96 @@ footer i {
   margin: 0 0 10px;
 }
 #main #plan-3 {
-  margin-bottom: 300px;
+  margin-bottom: -100px;
 }
 #main .plan-content {
   width: 100%;
-  padding: 60px 10% 0;
-  box-shadow: 0 30px 50px rgba(59, 77, 79, 0.2), inset 0 30px 30px rgba(59, 77, 79, 0.2);
+  padding-top: 60px;
+  box-shadow: 0 10px 30px rgba(59, 77, 79, 0.4), 0 30px 50px rgba(59, 77, 79, 0.2), inset 0 30px 30px rgba(59, 77, 79, 0.2);
+}
+#main .plan-content .note-block {
+  width: 100%;
+  margin: 20px auto;
+  font-style: italic;
+  background: #fff;
+  box-shadow: 0 0 10px rgba(59, 77, 79, 0.2);
+}
+#main .plan-content .note-block .card-img {
+  width: 30%;
+  float: left;
+}
+#main .plan-content .note-block .card-p {
+  width: 65%;
+  float: left;
+}
+#main .plan-content .note-block p {
+  color: #7872ad;
+  padding: 20px;
+  text-align: left;
+  margin: 0;
 }
 #main .plan-content p {
   text-align: justify;
   padding: 10px 0;
   font-size: 18px;
 }
-#main .plan-content p.highlight {
-  font-size: 1.625em;
-  text-align: center;
-  padding: 30px 0 40px;
+#main .plan-content p .line-through {
+  text-decoration: line-through;
+  display: inline;
 }
-#main .plan-content p.note-block {
-  padding: 30px 50px;
-  color: #7872ad;
-  font-style: italic;
+#main .plan-highlight h3.highlight {
+  color: #fff;
+  font-size: 2em;
+  padding: 50px 0;
+}
+#main .plan-highlight h3.highlight span {
+  display: block;
+}
+#main .plan-highlight.plan1 {
+  background: url(../images/plan1_bg.jpg) no-repeat center center fixed;
+  background-size: cover;
 }
 #main .toBottom {
   text-decoration: underline;
-  padding: 0 7px;
-  margin: 0 4px;
+  padding: 3px 12px;
+  margin: 0 10px;
 }
 #main .toBottom:hover, #main .toBottom:focus {
   background: #e95385;
   color: #fff;
   text-decoration: none;
-  padding: 3px 7px;
+}
+@media only screen and (min-width: 1200px) {
+  #main .plan-content .note-block .card-img {
+    width: 28%;
+  }
+  #main .plan-content .note-block .card-p {
+    width: 70%;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+  #main .plan-content .note-block .card-img {
+    width: 42%;
+  }
+  #main .plan-content .note-block .card-p {
+    width: 58%;
+  }
+}
+@media only screen and (min-width: 769px) and (max-width: 991px) {
+  #main .plan-content .note-block .card-img {
+    width: 100%;
+  }
+  #main .plan-content .note-block .card-p {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 768px) {
+  #main .plan-content .note-block .card-img {
+    width: 100%;
+  }
+  #main .plan-content .note-block .card-p {
+    width: 100%;
+  }
 }
 @media only screen and (max-width: 480px) {
   #main {
@@ -553,6 +643,7 @@ footer i {
 
 .item10, .item11, .item12, .item13, .item14 {
   width: 36%;
+  height: auto !important;
   opacity: 1 !important;
 }
 @media only screen and (min-width: 769px) and (max-width: 991px) {
@@ -566,6 +657,10 @@ footer i {
   }
 }
 
+.item14 {
+  width: 30%;
+}
+
 .item-square {
   position: absolute;
 }
@@ -576,6 +671,8 @@ footer i {
 }
 
 #clients {
+  position: relative;
+  z-index: 2;
   margin: 40px auto;
 }
 #clients .carousel {
@@ -619,6 +716,15 @@ footer i {
   border-color: #e95385;
   background-color: #fff;
 }
+@media only screen and (max-width: 480px) {
+  #clients .carousel {
+    width: 90%;
+  }
+  #clients .carousel blockquote {
+    width: 90%;
+    margin-left: 0;
+  }
+}
 
 #instagram {
   margin: 120px 0;
@@ -630,6 +736,10 @@ footer i {
 
 .purple {
   color: #7872ad;
+}
+
+.yellow {
+  color: #fff100;
 }
 
 @media only screen and (min-width: 769px) {
@@ -650,6 +760,29 @@ footer i {
 }
 .note.main-note {
   display: inline-block;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.left-img {
+  float: left;
+  width: 30%;
+  margin-left: -10%;
+}
+
+figure {
+  text-align: center;
+  margin: 18px auto;
+}
+figure img {
+  max-width: 100%;
+  display: inline-block;
+}
+figure figcaption {
+  font-style: italic;
+  color: #777;
 }
 
 .note-sm {
