--- a/sass/base/media.scss
+++ b/sass/base/media.scss
@@ -3,6 +3,7 @@ $xs: 480px;
 $sm: 768px;
 $md: 991px;
 $lg: 1200px;
+$xlg: 1600px;
 
 @mixin respond-to($media) {
 	@if $media == xxs-mobile {
@@ -33,6 +34,11 @@ $lg: 1200px;
 	}
 	@else if $media == xlg-screen {
 		@media only screen and (min-width: $lg) { 
+			@content;
+		}
+	}
+	@else if $media == xxlg-screen {
+		@media only screen and (min-width: $xlg) { 
 			@content;
 		}
 	}
