--- a/css/global.css
+++ b/css/global.css
@@ -20,11 +20,13 @@ body {
 ::-moz-selection {
   color: #fff;
   background: #66c3c2;
+  text-decoration: none;
 }
 
 ::selection {
   color: #fff;
   background: #66c3c2;
+  text-decoration: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -493,6 +495,7 @@ footer i {
 #main #plan-1, #main #plan-2, #main #plan-3 {
   background: #f1f2f2;
   margin: 0 0 10px;
+  box-shadow: 0 10px 30px rgba(59, 77, 79, 0.4), 0 30px 50px rgba(59, 77, 79, 0.2), inset 0 30px 30px rgba(59, 77, 79, 0.2);
 }
 #main #plan-3 {
   margin-bottom: -100px;
@@ -500,7 +503,6 @@ footer i {
 #main .plan-content {
   width: 100%;
   padding-top: 60px;
-  box-shadow: 0 10px 30px rgba(59, 77, 79, 0.4), 0 30px 50px rgba(59, 77, 79, 0.2), inset 0 30px 30px rgba(59, 77, 79, 0.2);
 }
 #main .plan-content .note-block {
   width: 100%;
@@ -542,6 +544,14 @@ footer i {
 }
 #main .plan-highlight.plan1 {
   background: url(../images/plan1_bg.jpg) no-repeat center center fixed;
+  background-size: cover;
+}
+#main .plan-highlight.plan2 {
+  background: url(../images/plan2_bg.jpg) no-repeat center center fixed;
+  background-size: cover;
+}
+#main .plan-highlight.plan3 {
+  background: url(../images/plan3_bg.jpg) no-repeat center center fixed;
   background-size: cover;
 }
 #main .toBottom {
