--- a/sass/global.scss
+++ b/sass/global.scss
@@ -28,6 +28,7 @@ body {
 @include selection {
 	color: $white; 
 	background: $green;
+	text-decoration: none;
 }
 //h-style
 h1, h2, h3, h4, h5, h6 {
@@ -494,7 +495,6 @@ footer {
 					color: $white;
 				}
 			}
-			
 		}
 	}
 	@include respond-to (normal-mobile){
@@ -587,6 +587,7 @@ footer {
 	#plan-1, #plan-2, #plan-3 {
 		background: $light-gray;
 		margin: 0 0 10px;
+		box-shadow: 0 10px 30px rgba($dark,.4), 0 30px 50px rgba($dark,.2), inset 0 30px 30px rgba($dark,.2);
 	}
 	#plan-3 {
 		margin-bottom: -100px;
@@ -594,7 +595,6 @@ footer {
 	.plan-content {
 		width: 100%;
 		padding-top: 60px;
-		box-shadow: 0 10px 30px rgba($dark,.4), 0 30px 50px rgba($dark,.2), inset 0 30px 30px rgba($dark,.2);
 		.note-block {
 			width: 100%;
 			margin: 20px auto;
@@ -645,6 +645,14 @@ footer {
 		}
 		&.plan1 {
 			background: url(../images/plan1_bg.jpg) no-repeat center center fixed;
+			background-size: cover;
+		}
+		&.plan2 {
+			background: url(../images/plan2_bg.jpg) no-repeat center center fixed;
+			background-size: cover;
+		}
+		&.plan3 {
+			background: url(../images/plan3_bg.jpg) no-repeat center center fixed;
 			background-size: cover;
 		}
 	}
